Works in in-memory database